# StApi

./: pyproject.toml
steps/: config_reader.py  main.py  responses.py
steps/common/: base.py  post.py  statistics.py
steps/logic/: posts.py  statistics.py
steps/resources/: config.json
steps/routers/: basic.py  posts.py  statistics.py
steps/utils/: mongo_utils.py
tests/: test_steps.py
