[tool.poetry]
name = "steps"
version = "0.1.0"
description = ""
authors = ["Bar Buskila <barbibuskila6@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
loguru = "^0.5.3"
uvicorn = "^0.14.0"
dnspython = "^2.1.0"
motor = "^2.4.0"
starlette-exporter = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
